--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
     <!-- 主页内容 -->
     <div class="profile">
-        <img src="241226-t" class="avatar" alt="头像">
+        <img src="241226-t.jpg " class="avatar" alt="头像">
         <h1>小明同学</h1>
         <div class="stats">
             <span>752获赞</span>
