--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
             <span>88粉丝</span>
         </div>
         <div class="grid">
-            <div class="thumbnail" data-folder="1"></div>
+            <div class="thumbnail" data-folder="1">
+                 <img src="250115-0.webp" class="thumb" alt="缩略图">
+            </div>
             <div class="thumbnail" data-folder="2"></div>
             <div class="thumbnail" data-folder="3"></div>
         </div>
