--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         .thumbnail {
             aspect-ratio: 1/1;
-            background: #000000;
+            background: #FFFFFF ;
             position: relative;
         }
 
@@ -94,9 +94,9 @@
 
         .close-btn {
             position: absolute;
-            top: 20px;
-            right: 20px;
-            color: white;
+            top: 30px;
+            right: 30px;
+            color: black;
             font-size: 24px;
         }
     </style>
