--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
 
         .thumbnail {
-            aspect-ratio: 1/1;
+            aspect-ratio: 3/4;
             background: #FFFFFF ;
             position: relative;
         }
@@ -95,8 +95,8 @@
         .close-btn {
             position: absolute;
             top: 30px;
-            right: 30px;
-            color: black;
+            right: 40px;
+            color: cyan;
             font-size: 24px;
         }
     </style>
