--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         .music-control {
         background: none;
         border: none;
-        width: 50px;
+        width: 90%;
         height: 50px;
         cursor: pointer;
-        display: inline-block;
+        display: block;
         transition: transform 0.3s;
     }
 
@@ -133,7 +133,7 @@
         </button>
         </div>
         <audio id="bgMusic" loop>
-        <source src="background-music.mp3" type="audio/mpeg">
+        <source src="xht.mp3" type="audio/mpeg">
         您的浏览器不支持音频播放。
     </audio>
        
