--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     .music-control:hover {
         transform: scale(3);
     }
+        .music-control img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* 保持完整显示，可能有留白 */
+    display: block;
+        }
 
     .stats {
         position: relative; /* 确保音乐按钮能放在该位置 */
