--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
         transform: scale(3);
     }
         .music-control img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* 保持完整显示，可能有留白 */
-    display: block;
+    width: 100%;  /* 让图片宽度填充整个 .music-control */
+    height: auto; /* 保持图片比例 */
+    display: block; /* 避免默认的行内空隙 */
         }
 
     .stats {
