--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@
         .music-control {
         background: none;
         border: none;
-        width: 90%;
+        width: 90vw;
         height: 50px;
         cursor: pointer;
         display: block;
+        margin: 0 auto; /* 水平居中 */
         transition: transform 0.3s;
     }
 
     .music-control:hover {
-        transform: scale(3);
+        transform: scale(1.1);
     }
         .music-control img {
     width: 100%;  /* 让图片宽度填充整个 .music-control */
