--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     .music-control:hover {
         transform: scale(1);
     }
-        .music-control img {
-    width: 100%;  /* 让图片宽度填充整个 .music-control */
-    height: auto; /* 保持图片比例 */
-    display: block; /* 避免默认的行内空隙 */
+    .music-control img {
+        width: 100%;  /* 让图片宽度填充整个 .music-control */
+        height: auto; /* 保持图片比例 */
+        display: block; /* 避免默认的行内空隙 */
         }
 
     .stats {
@@ -152,6 +152,9 @@
             <div class="thumbnail" data-folder="3">
                 <img src="241215-0.webp" class="thumb" alt="缩略图">
             </div>
+            <div class="thumbnail" data-folder="4">
+                <img src="241128-0.webp" class="thumb" alt="缩略图">
+            </div>
         </div>
     </div>
 
@@ -180,6 +183,10 @@ const foldersData = {
     3: {
         bgm: "241215.mp3",
         media: ["241215-1.mp4", "241215-2.mp4", "241215-3.mp4", "241215-4.webp"]
+    }
+    4: {
+    bgm: "241128.mp3",
+    media: ["241128-1.png"]
     }
 };
 
