--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ const foldersData = {
         media: ["241123-1.mp4", "241123-2.mp4", "241123-3.png"]
     },
     6: {
+        bgm: "241116.mp3",
         media: ["241116-1.mp4"]
     }
 };
