--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             width: 100vw;
             height: 100vh;
             display: none;
+            background: #000; /* 新增黑色背景 */
         }
 
         .folder {
