--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
             gap: 2px;
         }
 
+        .grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* 裁剪填充，不变形 */
+        }
+
         .thumbnail {
             aspect-ratio: 3/4;
             background: #FFFFFF;
