--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover; /* 裁剪填充，不变形 */
+              display: block;  /* 去掉默认的 img 间隙 */
         }
 
         .thumbnail {
