--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
                 <img src="240923-1-0.webp" class="thumb" alt="缩略图">
             </div>
             <div class="thumbnail" data-folder="13">
-                <img src="250915-0.webp" class="thumb" alt="缩略图">
+                <img src="240915-0.webp" class="thumb" alt="缩略图">
             </div>
             <div class="thumbnail" data-folder="14">
-                <img src="250910-0.webp" class="thumb" alt="缩略图">
+                <img src="240910-0.webp" class="thumb" alt="缩略图">
             </div>
             <div class="thumbnail" data-folder="15">
                 <img src="240904-0.webp" class="thumb" alt="缩略图">
@@ -283,12 +283,12 @@ const foldersData = {
         media: ["240923-1-0.webp"]
     },
     13: {
-        bgm: "240910.mp3",
-        media: ["240910-1.jpg", "240910-2.jpg"]
+        bgm: "240915.mp3",
+        media: ["240915-1.webp", "240915-2.webp"]
     },
     14: {
-        bgm: "250101.mp3",
-        media: ["250101-1.mp4", "250101-2.mp4", "250101-3.mp4", "250101-4.mp4"]
+        bgm: "240910.mp3",
+        media: ["240910-1.webp", "240910-2.webp"]
     },
     15: {
         bgm: "240904.mp3",
