--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ const foldersData = {
     },
     14: {
         bgm: "240910.mp3",
-        media: ["240910-1.webp", "240910-2.webp"]
+        media: ["240910-1.jpg", "240910-2.jpg"]
     },
     15: {
         bgm: "240904.mp3",
